# pico-gen

./: README.md
oled/c/: CMakeLists.txt  main.c
oled/c/examples/: CMakeCache.txt  CMakeLists.txt  ImageData.c  ImageData.h  LCD_2in_test.c  OLED_2in23_test.c
pico-com/: main.py
pico-control/: CMakeLists.txt  adc.c  adc.h  main.c  pwm.c  pwm.h  spi.c  uart.c  uart.h
pwm/: CMakeLists.txt  adc.c  main.c  uart.c  uart.h
